After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771564 - power: Fix wifi device state when opening power panel
power: Fix wifi device state when opening power panel
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-17 00:38 UTC by Michael Catanzaro
Modified: 2016-09-20 08:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: Fix wifi device state when opening power panel (1.09 KB, patch)
2016-09-17 00:38 UTC, Michael Catanzaro
committed Details | Review
Alternate patch for gnome-3-20 branch (1.04 KB, patch)
2016-09-17 00:49 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2016-09-17 00:38:24 UTC
This toggle is always set to off when the panel is opened. We should
check whether it's on or not when opening the panel. Currently we are
only subscribed to changes, so we don't check the wifi state until it's
toggled on or off after the panel has been opened the first time.
Comment 1 Michael Catanzaro 2016-09-17 00:38:27 UTC
Created attachment 335743 [details] [review]
power: Fix wifi device state when opening power panel
Comment 2 Michael Catanzaro 2016-09-17 00:49:59 UTC
Created attachment 335744 [details] [review]
Alternate patch for gnome-3-20 branch
Comment 3 Bastien Nocera 2016-09-20 08:49:58 UTC
Attachment 335743 [details] pushed as f4232a2 - power: Fix wifi device state when opening power panel

2nd patch pushed to the gnome-3-20 branch.